--- a/index.css
+++ b/index.css
@@ -1,46 +1,69 @@
 body{
     background-color: rgb(34, 34, 31);
+    background: #191919;
 }
 
 .header{  
     background-color: rgba(255, 166, 0, 0);   
-    margin-top: 1cm;
     display: flex;  
     justify-content: center;
-    position: sticky;
+    padding:0px;
+
+    border:0px;
+    border-color:#191919;
+    border-style: solid;
+    background-color: rgb(32, 32, 32);
+    opacity: 100%;
+    
 }  
 
 .header * {  
-    display: inline;
+    display:inline;
     align-items: center;  
 } 
 
 .header li {  
-    margin: 150px;
+    float: left;
+    margin-left: 200px;
+    margin-right: 200px;
+    padding:20px;
 }  
 
 .header li a {  
     font-family: 'Public Sans', sans-serif;
     font-size: 25px;
-    color: rgb(138, 169, 117);  
+    color:#ffffff;
     text-decoration: none;
+    text-align: center;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
 }  
 
 .title{
     font-family: 'Playfair Display', serif;
     font-size: 80px;
-    color: rgb(250, 246, 228);
+    color: #ffffff;
     text-align: center;
-    margin-top: center;
+    margin-top: 50px;
     margin-bottom: 0cm;
+    margin-left:auto;
+    padding-bottom: 10px;
 }
 
 .subtitle{
     font-family: 'Public Sans', sans-serif;
     font-size: 25px;
-    color: rgb(138, 169, 117);
     text-align: center;
     margin-top: 0cm;
+    margin-left: auto;
+}
+
+.container{
+    margin-left:auto;
+    margin-right: auto;
+    margin-bottom: 0;
 }
 
 .box{
@@ -60,7 +83,7 @@ body{
 .desc{
     font-family: 'Inconsolata', sans-serif;
     font-size: 15px;
-    color: rgb(223, 223, 223);
+    color: #ffffff;
     margin-left: 10px;
 }
 
@@ -87,7 +110,7 @@ body{
     border-radius: 50%;
     margin: auto;
     padding: 0%;
-    transform: translateX(-335px) translateY(calc(-473px - 50%));
+    transform: translateX(-335px) translateY(12px);
     position:sticky;
 }
 
@@ -100,7 +123,7 @@ body{
     border-radius: 50%;
     margin: auto;
     padding: 0%;
-    transform: translateX(-355px) translateY(calc(-483px - 50%));
+    transform: translateX(-355px) translateY(2px);
     position:sticky;
 }
 
@@ -113,7 +136,7 @@ body{
     border-radius: 50%;
     margin: auto;
     padding: 0%;
-    transform: translateX(-315px) translateY(calc(-493px - 50%));
+    transform: translateX(-315px) translateY(-8px);
     position:sticky;
 }
 
@@ -126,7 +149,7 @@ body{
     border-radius: 5%;
     margin: auto;
     padding: 0%;
-    transform: translateX(285px) translateY(calc(-503px - 50%));
+    transform: translateX(285px) translateY(-22px);
     position:sticky;
 }
 
@@ -138,7 +161,6 @@ footer{
     text-align: center;
     font-family: 'Public Sans', sans-serif;
     font-size: 25px;
-    color: rgb(138, 169, 117);
     text-decoration: none;
     text-underline-offset: 100cm;
 }
