--- a/index.css
+++ b/index.css
@@ -1,158 +1,122 @@
-body{
-    background-color: rgb(34, 34, 31);
-    background: #191919;
+body {
+    background-color: #141820;
 }
 
-.header{  
-    background-color: rgba(255, 166, 0, 0);   
-    display: flex;  
+.nav-cont {
+    display: flex;
+    list-style-type: none;
     justify-content: center;
-    padding:0px;
+    flex-wrap: wrap;
+}
 
-    border:0px;
-    border-color:#191919;
-    border-style: solid;
-    background-color: rgb(32, 32, 32);
-    opacity: 100%;
-    
-}  
 .nav-item {
-    padding: 1em;
+    padding: 0px;
+    margin-top: 25px;
+    margin-left: 32px;
+    margin-right: 32px;
 
-.header * {  
-    display:inline;
-    align-items: center;  
-} 
-
-.header li {  
-    float: left;
-    margin-left: 200px;
-    margin-right: 200px;
-    padding:20px;
-}  
-
-.header li a {  
-    font-family: 'Public Sans', sans-serif;
-    font-size: 25px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
     color:#ffffff;
     text-decoration: none;
-    text-align: center;
-    padding-top: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-}  
 
-.title{
-    font-family: 'Playfair Display', serif;
-    font-size: 80px;
-    color: #ffffff;
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: 0cm;
-    margin-left:auto;
-    padding-bottom: 10px;
+
+    border: 0px;
 }
 
-.subtitle{
-    font-family: 'Public Sans', sans-serif;
+.nav-cont a{
+    text-decoration: none;
+
+    background: linear-gradient(to right, #7F7FD5, #86A8E7, #91EAE4);
+    color:transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+
+.nav-cont a:visited{
+    text-decoration: none;
+    color:#FFFFFF;
+}
+
+.nav-cont a:hover{
+    color:#FFFFFF;
+}
+
+.nav-cont a:focus{
+    text-decoration: none;
+    color:#FFFFFF;
+}
+
+.nav-cont a:hover, a:active{
+    text-decoration: none;
+    color:#FFFFFF;
+}
+
+.title {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 30px;
+    color: #ffffff;
+
+    margin-top: 16%;
+    margin-bottom: 16%;
+    margin-left: 29%;
+    margin-right: 25%;
+
+
+    display: inline-block;
+}
+
+.name {
+    background: linear-gradient(to right, #7F7FD5, #86A8E7, #91EAE4);
+    color:transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+
+.subtitle {
+    font-size: 30px;
+    margin-top: -1cm;
+    margin-bottom: 80px;
+}
+
+.butpos {
+    float: right;
+    margin-top: -26%;
+    margin-bottom: 17%;
+    margin-right: 32%;
+}
+
+.button {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
     font-size: 25px;
-    text-align: center;
-    margin-top: 0cm;
-    margin-left: auto;
-}
+    color: #141820;
 
-.container{
-    margin-left:auto;
-    margin-right: auto;
-    margin-bottom: 0;
-}
-
-.box{
-    background-color: rgb(32, 32, 32);
-    outline: 0cm;
-    width: 750px;
-    height: 450px;
-    border: 0px;
-    border-radius: 10px;
-    margin: auto;
-    margin-top: 5%;
-    padding:0%;
-    box-shadow: 10px 10px 20px #191919;
+    box-shadow: #000000, 6px, 6px;
     
+    height:100px;
+    width:180px;
+
+    border: 1px;
+    border-radius: 10px;
+    outline: 1cm;
+
+    background: linear-gradient(to right, #7F7FD5, #86A8E7, #91EAE4);
+    -webkit-background-clip:padding-box;
+    background-clip: padding-box;
+
+    cursor: pointer;
+    transition-duration: 0.4s;
 }
 
-.desc{
-    font-family: 'Inconsolata', sans-serif;
-    font-size: 15px;
-    color: #ffffff;
-    margin-left: 10px;
-}
-
-.boxheader{
-    background-color: rgb(38, 39, 39);
-    outline: 0cm;
-    width: 750px;
-    height: 33px;
-    border: 0px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    margin: auto;
-    padding:0%;
-    position: sticky;
-    transform: translateY(calc(-440px - 50%));
-}
-
-.dot1{
-    background-color: rgb(230, 192, 98);
-    outline: 0cm;
-    width: 10px;
-    height: 10px;
-    border: 0px;
-    border-radius: 50%;
-    margin: auto;
-    padding: 0%;
-    transform: translateX(-335px) translateY(12px);
-    position:sticky;
-}
-
-.dot2{
-    background-color: rgb(230, 98, 98);
-    outline: 0cm;
-    width: 10px;
-    height: 10px;
-    border: 0px;
-    border-radius: 50%;
-    margin: auto;
-    padding: 0%;
-    transform: translateX(-355px) translateY(2px);
-    position:sticky;
-}
-
-.dot3{
-    background-color: rgb(131, 230, 98);
-    outline: 0cm;
-    width: 10px;
-    height: 10px;
-    border: 0px;
-    border-radius: 50%;
-    margin: auto;
-    padding: 0%;
-    transform: translateX(-315px) translateY(-8px);
-    position:sticky;
-}
-
-.search{
-    background-color: rgb(55, 56, 56);
-    outline: 0cm;
-    width: 150px;
-    height: 16px;
-    border: 0px;
-    border-radius: 5%;
-    margin: auto;
-    padding: 0%;
-    transform: translateX(285px) translateY(-22px);
-    position:sticky;
+.button:hover{
+    color:#FFFFFF;
 }
 
 footer{
@@ -161,8 +125,23 @@ footer{
     bottom: 0;
     width: 100%;;
     text-align: center;
-    font-family: 'Public Sans', sans-serif;
-    font-size: 25px;
+    opacity: 100%;
+
+    padding-top: 13px;
+    padding-bottom: 13px;
+    background: linear-gradient(to left, #7F7FD5, #86A8E7, #91EAE4);
+    -webkit-background-clip:padding-box;
+    background-clip: padding-box;
+}
+footer a{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 15px;
     text-decoration: none;
-    text-underline-offset: 100cm;
+    color:#141820;
+    
+    transition-duration: 0.4s;
+}
+footer a:hover{
+    color:#FFFFFF;
 }
