--- a/projects.css
+++ b/projects.css
@@ -67,6 +67,8 @@ body {
     margin-top: 2cm;
 
     animation: fadein 2s;
+
+    margin-bottom: 60px;
 }
 
 .title{
@@ -130,6 +132,8 @@ footer{
     background: linear-gradient(to left, #7F7FD5, #86A8E7, #91EAE4);
     -webkit-background-clip:padding-box;
     background-clip: padding-box;
+
+    
 }
 footer a{
     font-family: 'Montserrat', sans-serif;
