--- a/style.css
+++ b/style.css
@@ -92,13 +92,18 @@ li {
     width: 100%;
     max-width: 300px;
 
-    margin-right: 30px;
     margin-top: 30px;
     margin-bottom: 30px;
 
-    float: left; 
+    float: right; 
 
     border: solid;
+}
+
+@media (min-width: 300px) {
+    .abme img {
+        margin-left: 0;
+    }
 }
 
 .about-me .content-wrap {
