--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ li {
 
 /* about me */
 .about-me {
-    background-color:rgb(45, 45, 45);
+    background-color: #1e1f25;
     color:rgb(255, 255, 255);
 }
 
@@ -131,7 +131,7 @@ li {
 
 /* projects */
 .projects {
-    background-color:rgb(45, 45, 45);
+    background-color: #1e1f25;
     color:rgb(255, 255, 255);
 }
 
@@ -174,7 +174,7 @@ li {
 
 /* contact */
 .contact {
-    background-color:rgb(45, 45, 45);
+    background-color: #1e1f25;
     color:rgb(255, 255, 255);
 }
 
